--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
@@ -18,7 +21,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +33,55 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-block">
+        <div class="col-lg-2 hour">9AM</div>
+        <textarea class="col-lg-9 past description" id="ta9"></textarea>
+        <button class="col-lg-1 saveBtn"><i class="bi bi-save-fill"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-lg-2 hour">10AM</div>
+        <textarea class="col-lg-9 past description" id="ta10"></textarea>
+        <button class="col-lg-1 saveBtn"><i class="bi bi-save-fill"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-lg-2 hour">11AM</div>
+        <textarea class="col-lg-9 past description" id="ta11"></textarea>
+        <button class="col-lg-1 saveBtn"><i class="bi bi-save-fill"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-lg-2 hour">12PM</div>
+        <textarea class="col-lg-9 past description" id="ta12"></textarea>
+        <button class="col-lg-1 saveBtn"><i class="bi bi-save-fill"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-lg-2 hour">1PM</div>
+        <textarea class="col-lg-9 past description" id="ta13"></textarea>
+        <button class="col-lg-1 saveBtn"><i class="bi bi-save-fill"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-lg-2 hour">2PM</div>
+        <textarea class="col-lg-9 past description" id="ta14"></textarea>
+        <button class="col-lg-1 saveBtn"><i class="bi bi-save-fill"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-lg-2 hour">3PM</div>
+        <textarea class="col-lg-9 past description" id="ta15"></textarea>
+        <button class="col-lg-1 saveBtn"><i class="bi bi-save-fill"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-lg-2 hour">4PM</div>
+        <textarea class="col-lg-9 past description" id="ta16"></textarea>
+        <button class="col-lg-1 saveBtn"><i class="bi bi-save-fill"></i></button>
+      </div>
+      <div class="row time-block">
+        <div class="col-lg-2 hour">5PM</div>
+        <textarea class="col-lg-9 past description" id="ta17"></textarea>
+        <button class="col-lg-1 saveBtn"><i class="bi bi-save-fill"></i></button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
